// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a snapshot in gallery view 1`] = `
<Gallery
  hondas={
    Array [
      Object {
        "alt": "honda!",
        "description": "My first motorcycle. I still regret selling it.",
        "title": "CB450 1986",
        "url": "./images/01-honda-CB450-1986.jpg",
      },
      Object {
        "alt": "honda!",
        "description": "Photo taken in San Francisco.",
        "title": "CB1100F",
        "url": "./images/02-honda-CB1100F.jpg",
      },
      Object {
        "alt": "honda!",
        "description": "Photo taken in San Francisco.",
        "title": "Avocado green Honda",
        "url": "./images/03-honda.jpg",
      },
    ]
  }
>
  <div
    className="galleryView"
  >
    <div>
      <input
        onChange={[Function]}
        type="checkbox"
      />
      <img
        alt="honda!"
        className="galleryImg"
        src="./images/01-honda-CB450-1986.jpg"
      />
    </div>
    <div>
      <input
        onChange={[Function]}
        type="checkbox"
      />
      <img
        alt="honda!"
        className="galleryImg"
        src="./images/02-honda-CB1100F.jpg"
      />
    </div>
    <div>
      <input
        onChange={[Function]}
        type="checkbox"
      />
      <img
        alt="honda!"
        className="galleryImg"
        src="./images/03-honda.jpg"
      />
    </div>
  </div>
</Gallery>
`;

exports[`renders a snapshot in list view 1`] = `
<div
  className="listView"
>
  <ul>
    <li>
      <span
        className="title"
      >
        CB450 1986
      </span>
       
      <span>
        My first motorcycle. I still regret selling it.
      </span>
       
      <span
        aria-label=""
        role="img"
      >
        <a
          href={0}
        >
          🔗
        </a>
      </span>
    </li>
    <li>
      <span
        className="title"
      >
        CB1100F
      </span>
       
      <span>
        Photo taken in San Francisco.
      </span>
       
      <span
        aria-label=""
        role="img"
      >
        <a
          href={1}
        >
          🔗
        </a>
      </span>
    </li>
    <li>
      <span
        className="title"
      >
        Avocado green Honda
      </span>
       
      <span>
        Photo taken in San Francisco.
      </span>
       
      <span
        aria-label=""
        role="img"
      >
        <a
          href={2}
        >
          🔗
        </a>
      </span>
    </li>
  </ul>
</div>
`;

exports[`renders a snapshot in thumb view 1`] = `
<div
  class="thumbView"
>
  <div>
    <input
      type="checkbox"
    />
    <img
      alt="honda!"
      class="thumbImg"
      src="./images/01-honda-CB450-1986.jpg"
    />
    <div
      class="title"
    >
      CB450 1986
    </div>
  </div>
  <div>
    <input
      type="checkbox"
    />
    <img
      alt="honda!"
      class="thumbImg"
      src="./images/02-honda-CB1100F.jpg"
    />
    <div
      class="title"
    >
      CB1100F
    </div>
  </div>
  <div>
    <input
      type="checkbox"
    />
    <img
      alt="honda!"
      class="thumbImg"
      src="./images/03-honda.jpg"
    />
    <div
      class="title"
    >
      Avocado green Honda
    </div>
  </div>
</div>
`;
